i dont know how the alignment did not break earlier but i fixed it

--- a/Assigment 1Blog page/styles.css
+++ b/Assigment 1Blog page/styles.css
@@ -1,7 +1,7 @@
 body {
     background-color: #F9F9FA;
     font-family: Arial, Helvetica, sans-serif;
-    
+    scroll-behavior: smooth;
 }
 h1 {
     font-size: 4rem;
@@ -79,8 +79,8 @@ header ul  {
 
 }
 
-header ul :hover {
-    transition: 0.5s ease-in-out;
+a:hover, header ul :hover {
+    transition: 0.2s ease-in-out;
    transform: scale(1.05);
    color: #AB82B0;
 }
@@ -124,10 +124,19 @@ main {
 }
 
 #rightSideBar {
-    width: 180px;
+    width: 2%;
     display: flex;
     flex-direction: column;
     left: 40px;
+    position: relative;
+    gap: 20px;
+}
+
+#rightSideBar-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    /*left: 40px;*/
     position: fixed;
     gap: 20px;
 }
@@ -143,7 +152,7 @@ main {
     display: flex;
     width: fit-content;
     flex-direction: row;
-    gap: 10px;
+    
     
 }
 
@@ -154,8 +163,8 @@ main {
     margin: 0px 0px 0px 0px;
     display: flex;
     position: relative;
-    gap: 10px;
-    
+    gap: 15px;
+    margin: 10px 0px 10px 0px;
     
 }
 #author-socials {
@@ -200,19 +209,22 @@ a:hover, #right-side-icons_txt-container:hover {
 }
 
 #middleSection {
-    width: 700px;
-    display: colume;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
     position: relative;
     align-items: center;
     align-content: center;
     justify-content: center;
-    margin-left: 190px;
+    margin-left: 190px;*/
     
 
 
 }
 
 article {
+    display: flex;
+    flex-direction: column;
     width: fit-content;
     background-color: white;
     line-height: 1.5rem;   position: relative;
@@ -226,12 +238,14 @@ article {
 }
 
 article img {
-    width: 600px;
+    width: 100%;
+    border-radius: 10px;
 }
 
 #commentSetion {
     width: 700px;
-    display: colume;
+    display: flex;
+    flex-direction: column;
     position: relative;
     gap: 40px;
     margin-bottom: 150px;
@@ -243,7 +257,7 @@ article img {
     position: relative;
     width: fit-content;
     display: flex;
-    flex-direction: ;
+    
     margin: 0;
     align-items: center;
     align-content: center;
@@ -260,8 +274,7 @@ article img {
     align-items: center;
     align-content: center;
     justify-content: center;
-    margin: 0
-    ;
+    margin: 0;
 }
     
   
@@ -342,15 +355,15 @@ input::placeholder {
     
 }
 aside{
-    width: 300px;
+    width: 30%;
     height: 100%;
     display: flex;
     flex-direction: column;
     position: relative;
     align-items: center;
     align-content: center;
-    justify-content: center;
-    margin-left: 120px;
+    justify-content: flex-end;
+    margin: 0px 0px 0px 0px;
     gap: 60px;
 }       
 
